Fix time taking two lines on mobile

--- a/fe/src/components/AgengaView/AgendaView.scss
+++ b/fe/src/components/AgengaView/AgendaView.scss
@@ -15,7 +15,7 @@
       margin-top: 4px;
       margin-right: 4px;
       font-size: 0.8em;
-      width: 40px;
+      width: 50px;
     }
 
     .agenda-view-item-content {
